<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_text">Andy\'s Android App Portfolio</string>
    <string name="btn_text_popularMovies">Popular Movies</string>
    <string name="btn_text_stockHawk">Stock Hawk</string>
    <string name="btn_text_buildItBigger">Build It Bigger</string>
    <string name="btn_text_makeYourAppMaterial">Make Your App Material</string>
    <string name="btn_text_goUbiquitous">Go Ubiquitous</string>
    <string name="btn_text_capstone">Capstone</string>
    <string name="toast_text_popularMovies">This button will launch the \"Popular Movies\" app.</string>
    <string name="toast_text_stockHawk">This button will launch the \"Stock Hawk\" app.</string>
    <string name="toast_text_buildItBigger">This button will launch the \"Build It Bigger\" app.</string>
    <string name="toast_text_makeYourAppMaterial">This button will launch the \"Make Your App Material\" app.</string>
    <string name="toast_text_goUbiquitous">This button will launch the \"Go Ubiquitous\" app.</string>
    <string name="toast_text_capstone">This button will launch my \"Capstone\" app.</string>
</resources>
