<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.a2g.nd.myappportfolio.MainActivityFragment">
                <TextView
                    android:id="@+id/main_tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_text"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/main_tv_textSize"
                    android:paddingBottom="@dimen/main_tv_bottomPadding"
                    android:layout_marginTop="@dimen/main_tv_marginTop" />
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/main_btn_popularMovies"
                    android:layout_below="@id/main_tv_title"
                    android:text="@string/btn_text_popularMovies" />
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/main_btn_stockHawk"
                    android:layout_below="@id/main_btn_popularMovies"
                    android:text="@string/btn_text_stockHawk"/>
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/main_btn_buildItBigger"
                    android:layout_below="@id/main_btn_stockHawk"
                    android:text="@string/btn_text_buildItBigger"/>
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/main_btn_makeYourAppMaterial"
                    android:layout_below="@id/main_btn_buildItBigger"
                    android:text="@string/btn_text_makeYourAppMaterial"/>
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/main_btn_goUbiquitous"
                    android:layout_below="@id/main_btn_makeYourAppMaterial"
                    android:text="@string/btn_text_goUbiquitous"/>
                <Button
                    style="@style/ButtonStyle"
                    android:id="@+id/main_btn_capstone"
                    android:layout_below="@id/main_btn_goUbiquitous"
                    android:text="@string/btn_text_capstone"/>

            </RelativeLayout>
    </ScrollView>
</FrameLayout>